<resources>
    <string name="launcher_name">Viaggia Rovereto</string>
    <string name="jp_name">Viaggia Rovereto</string>
    <string name="notifications_name">Notifications</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="label_portfolio_apk">Portfolio</string>
    <string name="downloaded_app">tmp</string>
    <string name="getting_apk">Retrieving the app&#8230;</string>
    <string name="error_occurs">OOPS! This app is not available yet.</string>
    <string name="not_secure_app">Not secure app!</string>
    <string name="enable_connection">You are not connected!\nEnable a valid connection and retry.</string>
    <string name="token_required">Please login before proceeding with the application.</string>
    <string name="auth_failed">Application initialization failed. Try connecting again.</string>
    <string name="update_application_question">A new version is available. Would you like to update the application now?</string>
    <string name="update_application_manual_list">Added to manual update</string>
    <string name="update_option_list">Manual update</string>
    <string name="manual_update">Updates</string>
    <string name="list_of_applications">List of applications</string>
    <string name="list_empty">No updates available</string>
    <string name="empty" />
    <string name="update_address">/download/VAS/update-viaggiarovereto.conf</string>
    <string name="update_host">www.smartcampuslab.it</string>
    <string name="check_updates">Check for updates</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="to_be_updated">To be updated</string>
    <string name="update_dev">Apps Version</string>
    <string name="update_dev_sum">Check for test updates</string>
    <string name="smartcampus_url_credits">http://www.smartcampuslab.it/swabout</string>
    <string name="update_application_notification">A new version of ViaggiaRovereto is available.</string>
    <string name="auth_required">Authenticate yourself with your Google account. This step is optional but enables ViaggiaRovereto advanced functionalities. </string>
    <string name="registered_pref">registered</string>
    <string name="upgrade_user_menu">Register</string>
    <string name="notification_text">%s new notification</string>
    <string name="notification_text_multi">%s new notifications</string>
    <string name="checking_version">Checking applications version</string>
    <string name="not_now">Not now</string>
    <string name="notification_type_journeyplanner">ViaggiaRovereto</string>
    <string name="about_text_app"><b>Integrated mobility information for the city of Rovereto</b></string>
    <string name="about_text_sc">The application is developed by the SmartCampus project\n\n<br /><a href="http://www.smartcampuslab.it/swabout">www.smartcampuslab.it</a></string>
    <string name="about_text_cdc">In collaboration with the municipality of Rovereto\n\n<br /><a href="http://www.comune.rovereto.tn.it">www.comune.rovereto.tn.it</a></string>
    <string name="questionnary_intro">Do you want to do a questionnaire? </string>
    <string name="questionnaire_exit">Thank you for your contribute</string>
	<string name="next_quiz">Next</string>
	<string name="skip_quiz">Skip</string>
</resources>